<package format="3">
  <name>realm_msgs</name>
  <version>1.0.0</version>
  <description>The realm_msg package contains messages for the real-time aerial localization and mapping framework (REALM)</description>

  <author>Alexander Kern</author>
  <maintainer email="al.kern@tu-bs.de">Alexander Kern</maintainer>

  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
       <build_type>ament_cmake</build_type>
  </export>
</package>


