<package format="3">
  <name>realm_msgs</name>
  <version>1.0.0</version>
  <description>The realm_msg package contains messages for the real-time aerial localization and mapping framework (REALM)</description>

  <author>Alexander Kern</author>
  <maintainer email="al.kern@tu-bs.de">Alexander Kern</maintainer>

  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>


  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
       <build_type>ament_cmake</build_type>
  </export>
</package>


