<package format="3">
  <name>realm_ros</name>
  <version>1.0.0</version>
  <description>The realm_ros package</description>

  <author>Alexander Kern</author>
  <maintainer email="al.kern@tu-bs.de">laxn_pander</maintainer>

  <license>GPL</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmw_implementation</depend>
  <depend>message_filters</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geodesy</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>geographic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>realm_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>builtin_interfaces</depend>

  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- The export tag contains other, unspecified, tags -->
 <export>
   <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lrealm_ros"/>
   <build_type>ament_cmake</build_type>
 </export>
</package>
