<package format="2">
  <name>realm_rviz_plugin</name>
  <version>1.0.0</version>
  <description>
     A plugin for rviz to render 2D geo tagged images in the rviz 3D area 
  </description>
  <maintainer email="hanes.harms@tu-bs.de">Hannes Harms</maintainer>
  <license>BSD</license>

  <author>Hannes Harms</author>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>realm_msgs</build_depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>realm_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

  <export>
  <build_type>ament_cmake</build_type>
</export>

</package>
